<resources>
    <string name="app_name">equilibrium</string>
    
    
    
    
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    
    <!-- Friendly error/success messages -->
    <string name="error_generic">Algo deu errado. Tente novamente.</string>
    <string name="error_network">Falha de conexão. Verifique sua internet e tente novamente.</string>
    <string name="error_server">Houve um problema no servidor. Tente novamente mais tarde.</string>
    <string name="error_bad_request">Verifique os dados informados e tente novamente.</string>
    <string name="error_unauthorized">Sessão expirada ou credenciais inválidas. Faça login novamente.</string>
    <string name="error_forbidden">Você não tem permissão para realizar esta ação.</string>
    <string name="error_not_found">Recurso não encontrado.</string>
    <string name="error_conflict">Conflito de informações. Verifique e tente novamente.</string>
    <string name="error_unprocessable">Há informações inválidas. Revise os campos e tente novamente.</string>
    <string name="error_too_many_requests">Muitas tentativas. Aguarde um pouco e tente novamente.</string>
    <string name="error_unknown">Ocorreu um erro inesperado. Tente novamente.</string>
    <string name="login_error_generic">Não foi possível fazer login. Verifique os dados e tente novamente.</string>
    <string name="error_patient_submit_generic">Não foi possível cadastrar o paciente. Tente novamente.</string>
    <string name="error_load_health_units">Não foi possível carregar as unidades. Tente novamente.</string>
    <string name="error_select_health_unit">Selecione uma unidade de saúde.</string>
    <string name="error_send_test">Não foi possível enviar o teste. Tente novamente.</string>
    <string name="error_participant_access">O perfil participante ainda não possui acesso.</string>
    <string name="error_invalid_credentials">Credenciais inválidas, verifique seu cpf e senha.</string>
    
    <string name="success_login">Login realizado com sucesso!</string>
    <string name="success_test_sent">Teste enviado com sucesso!</string>
    <string name="success_professional_created">Profissional cadastrado com sucesso!</string>

    <string name="confirm_send_title">Enviar resultado</string>
    <string name="confirm_send_message">Deseja enviar os dados do teste para o servidor?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <!-- Questionário (restored to avoid resource linking errors) -->
    <string name="questionnaire_title">Questionário</string>
    <string name="finish">Finalizar</string>
    <string name="option_0">Opção 0</string>
    <string name="option_1">Opção 1</string>
    <string name="option_2">Opção 2</string>
    <string name="option_3">Opção 3</string>
    <string name="obs_hint">Observações (opcional)</string>
    
    <!-- IVCF-20 Questionnaire -->
    <string name="questionnaire_ivcf20_title">IVCF-20 - Avaliação de Vulnerabilidade</string>
    <string name="group_idade">Idade</string>
    <string name="group_autopercepcao">Autopercepção da Saúde</string>
    <string name="group_avd">Incapacidades Funcionais</string>
    <string name="vulnerability_low">Baixa vulnerabilidade clínico-funcional</string>
    <string name="vulnerability_moderate">Moderada vulnerabilidade clínico-funcional</string>
    <string name="vulnerability_high">Alta vulnerabilidade clínico-funcional</string>
    <string name="result_score">Pontuação total: %1$d de %2$d pontos</string>
    <string name="result_interpretation">Classificação: %1$s</string>
    <string name="answer_all_questions">Responda todas as questões antes de finalizar.</string>
    
</resources>